applicationset/glance/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs
spec:
  gateways:
  - istio-system/default-gateway
  hosts:
  - gateway.proxmox.local
  http:
  - match:
    - uri:
        prefix: /glance/
    - uri:
        exact: /glance
    rewrite:
      uri: /
    route:
    - destination:
        host: glance-application.default.svc.cluster.local
        port:
          number: 3000
